@@ -77,7 +77,7 @@ int PointerTypeIncrement(AST *typ);
 // get base of an array type
 AST *GetArrayBase(AST *type);
 // create an array based on a type and expression or expression list
-AST *MakeArrayType(AST *basetype, AST *exprlist);
+AST *MakeArrayType(AST *basetype, AST *exprlist, AST *indexBase);
 
 int IsFunctionType(AST *typ);
 int IsStringType(AST *typ);
