@@ -1,5 +1,6 @@
 Version 5.9.21
 - Fixed loop test for downwards loops with steps > 1.
+- Improved handling of two dimensional arrays in BASIC
 
 Version 5.9.20
 - Added a new pass to re-calculate object sizes after symbol resolution (fixes some problems with memory overruns in C code used as Spin object)
